# pubkeyCollect

./: BRAIN_WALLET.md  Cargo.toml  InputSpec.md  README.md  matches.txt
scripts/: generate_bible_passwords.py  generate_dictionary_passwords.py
src/: lib.rs  main.rs  stats.rs
src/block/: mod.rs  parser.rs  reader.rs  script.rs
src/extractor/: canonical.rs  mod.rs  p2pk.rs  p2pkh.rs  p2tr.rs
src/storage/: bloom.rs  cpu_index.rs  fp64.rs  known_brainwallets.rs  mod.rs
wordlists/: bible_sample.txt  common_passphrases.txt  famous_quotes.txt
